--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!--Will work in your browser in these cases:-->
+Will work in your browser in these cases:
 
-<!--Safari 10.1.-->
-<!--Chrome Canary 60 – behind the Experimental Web Platform flag in chrome:flags.-->
-<!--Firefox 54 – behind the dom.moduleScripts.enabled setting in about:config.-->
-<!--Edge 15 – behind the Experimental JavaScript Features setting in about:flags.-->
+Safari 10.1.
+Chrome Canary 60 – behind the Experimental Web Platform flag in chrome:flags.
+Firefox 54 – behind the dom.moduleScripts.enabled setting in about:config.
+Edge 15 – behind the Experimental JavaScript Features setting in about:flags.
 <html lang="zh-CN" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
